--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,8 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\Repository\" />
+    <Folder Include="DTOs\Email\" />
     <Folder Include="Interfaces\Services\" />
   </ItemGroup>
 
