--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,12 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=.; Database=EventSpaceAPI;Trusted_Connection=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.; Database=EventSpaceAPI;Trusted_Connection=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=API;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
