--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entity\" />
-    <Folder Include="Constants\" />
+    <Folder Include="Entity\Todo\" />
+    <Folder Include="Entity\Ticket\" />
+    <Folder Include="Entity\Post\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.26" />
   </ItemGroup>
 
 </Project>
