--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,13 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.; Database=EventSpaceAPI;Trusted_Connection=True",
+        "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=API;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "EmailOption": {
+        "ApiKey": "c5aef8107e0b4d04e6b0d610a6761c02",
+        "SecretKey": "90e4822c0715a8fd1249d71aee42feaa"
+    },
+    "Jwt": {
+        "Key": "37C4C923-79C7-4447-904C-751843DAB353",
+        "Issuer": "https://localhost:7060",
+        "Audience": "https://localhost:7060"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=EventSpaceAPI;Trusted_Connection=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=API;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
