--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.; Database=EventSpaceAPI;Trusted_Connection=True",
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS01; Database=EventSpaceAPI;Trusted_Connection=True",
         "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=API;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "EmailOption": {
